--- a/Kairos_UI_GESEM/Kairos_UI_GESEM.vbproj
+++ b/Kairos_UI_GESEM/Kairos_UI_GESEM.vbproj
@@ -51,6 +51,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -70,6 +72,11 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connected Services\WhatsAppAPI\Reference.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Design\UIHelpers.vb" />
     <Compile Include="ButtonsForm.vb">
       <SubType>Form</SubType>
@@ -127,6 +134,14 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Connected Services\WhatsAppAPI\WhatsAppAPIs.wsdl" />
+    <None Include="Connected Services\WhatsAppAPI\WhatsAppAPIs.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\WhatsAppAPI\WhatsAppAPIs1.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -138,6 +153,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Connected Services\WhatsAppAPI\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.vb</LastGenOutput>
+    </None>
+    <None Include="Connected Services\WhatsAppAPI\configuration.svcinfo" />
+    <None Include="Connected Services\WhatsAppAPI\configuration91.svcinfo" />
+    <None Include="Connected Services\WhatsAppAPI\WhatsAppAPIs.disco" />
     <Content Include="Pictures\cancelar.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -153,6 +175,12 @@
     <Content Include="Pictures\logo_whatsapp.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\WhatsAppAPI\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
