--- a/WcfWhatsAppAPIService/Web.config
+++ b/WcfWhatsAppAPIService/Web.config
@@ -52,7 +52,8 @@
       Information Services 7.0. No es necesaria para la versión anterior de IIS.
   -->
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
+	  <!--Revisón de está sección-->
+    <validation validateIntegratedModeConfiguration="false"/> 
     <modules>
       <remove name="ScriptModule" />
       <add name="ScriptModule" preCondition="managedHandler" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -62,16 +63,20 @@
       <remove name="ScriptHandlerFactory" />
       <remove name="ScriptHandlerFactoryAppServices" />
       <remove name="ScriptResource" />
+		
+		<!-- Handler para archivos .svc (WCF Services) -->
+	  <add name="svc-Integrated" path="*.svc" verb="*"
+         type="System.ServiceModel.Activation.HttpHandler, System.ServiceModel.Activation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+         resourceType="Unspecified" requireAccess="Script" preCondition="integratedMode" />
+		
       <add name="ScriptHandlerFactory" verb="*" path="*.asmx" preCondition="integratedMode"
            type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       <add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode"
            type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       <add name="ScriptResource" preCondition="integratedMode" verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     </handlers>
-    <!--
-        Para examinar el directorio raíz de la aplicación web durante la depuración, establezca el valor siguiente en true.
-        Establézcalo en false antes de la implementación para evitar revelar información sobre la carpeta de aplicación web.
-      -->
+	  
+	  <!-- Permitir navegación de directorios para desarrollo -->
     <directoryBrowse enabled="true"/>
   </system.webServer>
   
@@ -87,7 +92,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-	
+	<!-- Configuración WCF -->
   <system.serviceModel>
     <services>
       <service behaviorConfiguration="WcfWhatsAppAPIService.WhatsAppAPIsBehavior"
