--- a/Kairos_UI_GESEM/Kairos_UI_GESEM.vbproj
+++ b/Kairos_UI_GESEM/Kairos_UI_GESEM.vbproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -85,6 +86,8 @@
       <DependentUpon>ButtonsForm.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Handler\MetaTokenValidator.vb" />
+    <Compile Include="Handler\TokenErrorHandler.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -102,8 +105,8 @@
     </Compile>
     <Compile Include="Utilities\DataBaseChecker.vb" />
     <Compile Include="Utilities\DBConnection.vb" />
-    <Compile Include="Utilities\ErrorHandler.vb" />
-    <Compile Include="Utilities\GitHandler.vb" />
+    <Compile Include="Handler\ErrorHandler.vb" />
+    <Compile Include="Handler\GitHandler.vb" />
     <Compile Include="Utilities\MessageLogger.vb" />
     <Compile Include="Utilities\NetworkChecker.vb" />
     <Compile Include="WABAConfig.Designer.vb">
@@ -156,6 +159,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\iconkairos.ico" />
     <None Include="Connected Services\WhatsAppAPI\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.vb</LastGenOutput>
@@ -175,6 +179,9 @@
     <Content Include="Pictures\guardar.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Pictures\iconkairos.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Pictures\logo_whatsapp.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -185,5 +192,6 @@
   <ItemGroup>
     <WCFMetadataStorage Include="Connected Services\WhatsAppAPI\" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
